--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,10 @@ body {
 
 /* Phase colors */
 .phase-backlog {
-  background-color: #b0bec5;
+  background-color: rgb(176, 190, 197);
 }
 .phase-pre-execution {
-  background-color: #a5d6a7;
+  background-color: #b0b025;
 }
 .phase-execution {
   background-color: #66bb6a;
@@ -81,13 +81,14 @@ body {
   background-color: #388e3c;
 }
 .phase-go-live {
-  background-color: #1b5e20;
+  background-color: #113913;
 }
 
 .phase-legend {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   margin-top: 20px;
+  font-size: 15px;
 }
 
 .phase-legend-item {
@@ -105,7 +106,7 @@ body {
 
 /* Gantt Bar Colors */
 .lane-phase-unknown {
-  background-color: rgba(252, 252, 252, 1);
+  background-color: rgb(176, 190, 197, 0.3);
 }
 .lane-phase-conflict {
   background-color: rgba(255, 241, 243, 0.7);
@@ -114,5 +115,5 @@ body {
   background-color: rgba(230, 255, 230, 0.7);
 }
 .lane-phase-planned {
-  background-color: rgba(250, 249, 240, 0.7);
+  background-color: rgba(250, 249, 240);
 }
